localization update sk_SK en_US

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel_en_US.utf8.properties
@@ -1,3 +1,4 @@
-#Sat Mar 16 14:26:19 CET 2013
+#Tue Apr 30 12:44:04 CEST 2013
+ExecuteChangeOptionsPanel.label.executeAfterAllApprovals=Execute after all approvals
 ExecuteChangeOptionsPanel.label.force=Force
 ExecuteChangeOptionsPanel.label.reconcile=Reconcile
