--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
@@ -1,6 +1,9 @@
-#Sat Mar 16 14:26:19 CET 2013
+#Tue Apr 30 12:44:04 CEST 2013
 PageBase.button.back=Back
 PageBase.button.save=Save
+WorkItemsPanel.assigned=Assigned to
+WorkItemsPanel.created=Created
+WorkItemsPanel.name=Name
 pageBase.midPointVersion=Version\: ${pom.version}, revision\: ${buildNumber}
 pageBase.rightsReserved=&copy;2013 Evolveum. All Rights Reserved.
 pageBase.unknownBuildNumber=unknown
