--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Sat Mar 16 14:26:19 CET 2013
+#Tue Apr 30 12:44:04 CEST 2013
 page.title=User details
 pageUser.accounts=Accounts
 pageUser.assignment.active=Active
@@ -44,6 +44,11 @@ pageUser.message.noPassword=Password is not entered.
 pageUser.message.noResourceSelected=No resource selected.
 pageUser.message.unsupportedState=Unsupported user form state '{0}'.
 pageUser.orgUnits=Organization units [{0}]
+pageUser.task.category=Category
+pageUser.task.execution=Execution state
+pageUser.task.name=Task name
+pageUser.task.status=Status
+pageUser.tasks=Tasks [{0}]
 pageUser.title.confirmDelete=Confirm delete
 pageUser.title.editing={0} details
 pageUser.title.selectAssignable=Select object(s)
