--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Mon Dec 03 22:55:00 CET 2012
+#Tue Apr 30 12:44:04 CEST 2013
 PageProcessInstancesRequestedBy.title=Process instances corresponding to my requests
 PageProcessInstancesRequestedFor.title=Process instances corresponding to requests about me
 pageProcessInstances.active=Currently active
@@ -9,6 +9,7 @@ pageProcessInstances.item.candidates=Candidate assignees
 pageProcessInstances.item.finished=Finished
 pageProcessInstances.item.name=Name
 pageProcessInstances.item.owner=Owner
+pageProcessInstances.item.result=Result
 pageProcessInstances.item.started=Started
 pageProcessInstances.item.status=Status
 pageProcessInstances.message.noItemSelected=No process instance has been selected.
