--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_en_US.utf8.properties
@@ -1,10 +1,16 @@
-#Fri Nov 02 15:51:05 CET 2012
+#Tue Apr 30 12:44:04 CEST 2013
 page.title=Work Item details
+pageWorkItem.accordionLabel.additionalData=Related data (detailed)
+pageWorkItem.accordionLabel.objectNew=Object after proposed change (detailed)
+pageWorkItem.accordionLabel.objectOld=Object before change (detailed)
+pageWorkItem.accordionLabel.processInstance=Process instance information
+pageWorkItem.accordionLabel.requester=Requester (detailed)
 pageWorkItem.additionalData.description=Role to be added
 pageWorkItem.additionalInfo=Supplementary information (do not edit, please)
 pageWorkItem.button.approve=Approve (NotImplYet)
 pageWorkItem.button.cancel=Back
 pageWorkItem.button.reject=Reject (NotImplYet)
+pageWorkItem.delta=Delta to be approved
 pageWorkItem.description=Work Item
 pageWorkItem.mainInfo=Basic information
 pageWorkItem.objectNew.description=Object after proposed change
