--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Thu Apr 11 19:11:15 CEST 2013
+#Tue Apr 30 12:44:04 CEST 2013
 ActivationType.enabled=Enabled
 ActivationType.title=Activation
 ActivationType.validFrom=Valid from
@@ -8,6 +8,9 @@ AssignmentPolicyEnforcementType.LEGALIZE=Legalize
 AssignmentPolicyEnforcementType.MARK=Mark
 AssignmentPolicyEnforcementType.NONE=None
 AssignmentPolicyEnforcementType.POSITIVE=Positive
+Boolean.FALSE=False
+Boolean.NULL=Undefined
+Boolean.TRUE=True
 LoggingLevelType.ALL=ALL
 LoggingLevelType.DEBUG=DEBUG
 LoggingLevelType.ERROR=ERROR
@@ -60,8 +63,10 @@ SynchronizationSituationType.LINKED=Linked
 SynchronizationSituationType.UNLINKED=Unlinked
 SynchronizationSituationType.UNMATCHED=Unmatched
 TaskDtoExecutionStatus.CLOSED=Closed
+TaskDtoExecutionStatus.CLOSED.withTimestamp=Closed at ${}
 TaskDtoExecutionStatus.RUNNABLE=Runnable
 TaskDtoExecutionStatus.RUNNING=Running
+TaskDtoExecutionStatus.RUNNING_OR_RUNNABLE=Running/Runnable
 TaskDtoExecutionStatus.SUSPENDED=Suspended
 TaskDtoExecutionStatus.WAITING=Waiting
 TaskDtoExecutionStatusFilter.ALL=All execution states
@@ -132,9 +137,13 @@ operation.com.evolveum.midpoint.model.importer.ObjectImporter.importObjectToRepo
 operation.com.evolveum.midpoint.model.importer.ObjectImporter.resolveReference=Reference resolution
 operation.com.evolveum.midpoint.model.importer.ObjectImporter.validateDynamicSchema=Validate dynamic schema
 operation.com.evolveum.midpoint.model.importer.ObjectImporter.validateResourceConfigurationSchema=Validate resource configuration schema
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute=Execute (Model)
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.focus.UserType=Execute user delta (Model)
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.projection.ShadowType=Execute shadow delta (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.executeDelta=Execute delta (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.linkAccount=Link account (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.unlinkAccount=Unlink account (Model)
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.updateSituationInAccount=Update situation in account (Model)
 operation.com.evolveum.midpoint.model.lens.projector.ContextLoader.checkProjectionContexts=Check projection contexts (Model)
 operation.com.evolveum.midpoint.model.lens.projector.InboundProcessor.processInbound=Process inbound (Model)
 operation.com.evolveum.midpoint.model.lens.projector.Projector.project=Project (Model)
@@ -154,6 +163,7 @@ operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.searchObjec
 operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.testResource=Test resource
 operation.com.evolveum.midpoint.provisioning.api.ResourceObjectChangeListener.checkSituation=Check synchronization situation
 operation.com.evolveum.midpoint.provisioning.api.ResourceObjectChangeListener.notifyChange=Notify change
+operation.com.evolveum.midpoint.provisioning.impl.ResourceManager.completeResource=Complete resource (Provisioning)
 operation.com.evolveum.midpoint.provisioning.impl.ResourceTypeManager.completeResource=Complete resource (Provisioning)
 operation.com.evolveum.midpoint.provisioning.impl.ShadowConverter.addShadow=Add shadow (Provisioning)
 operation.com.evolveum.midpoint.provisioning.ucf.api.ConnectorInstance.addObject=Add object (Ucf)
@@ -214,6 +224,8 @@ operation.com.evolveum.midpoint.web.component.assignment.AssignmentEditorPanel.l
 operation.com.evolveum.midpoint.web.component.assignment.AssignmentEditorPanel.loadObject=Load object (Gui)
 operation.com.evolveum.midpoint.web.component.assignment.AssignmentEditorPanel.loadResource=Load resource (Gui)
 operation.com.evolveum.midpoint.web.component.orgStruct.BookmarkableFolderContent.loadOrgUnit=Loading organization unit
+operation.com.evolveum.midpoint.web.component.prism.ContainerWrapper.createProperties=Create properties (Gui)
+operation.com.evolveum.midpoint.web.component.prism.ObjectWrapper.createContainers=Create containers (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageDebugList.deleteObject=Delete object (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageDebugList.deleteObjects=Delete objects (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageDebugView.loadObject=Load object (Gui)
@@ -236,6 +248,7 @@ operation.com.evolveum.midpoint.web.page.admin.home.PageMyPasswords.loadUserWith
 operation.com.evolveum.midpoint.web.page.admin.home.PageMyPasswords.savePassword=Save password (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageAdminResources.loadResource=Load resource (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResource.importFromResource=Import from resource
+operation.com.evolveum.midpoint.web.page.admin.resources.PageResourceEdit.saveResource=Save resource (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.connectorDiscovery=Connector discovery (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.deleteResources=Delete resources (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.syncStatus=Synchronization status (Gui)
@@ -308,9 +321,8 @@ schema.objectTypes.node=Node
 schema.objectTypes.object=Object
 schema.objectTypes.org=Organization
 schema.objectTypes.resource=Resource
-schema.objectTypes.resourceObject=Resource object
-schema.objectTypes.resourceState=Resource state
 schema.objectTypes.role=Role
+schema.objectTypes.shadow=Shadow
 schema.objectTypes.systemConfiguration=System configuration
 schema.objectTypes.task=Task
 schema.objectTypes.user=User
