--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/assignment/ACAttributePanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/assignment/ACAttributePanel_sk_SK.utf8.properties
@@ -1,2 +1,4 @@
-#Thu Oct 04 12:42:36 CEST 2012
+#Tue Apr 30 12:43:33 CEST 2013
 ACAttributePanel.button.showExprEditor=Zobraz výraz
+ACAttributePanel.hasOutbound=Has outbound
+ACAttributePanel.required=Required
