--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
@@ -1,6 +1,9 @@
-#Sat Mar 16 14:26:07 CET 2013
+#Tue Apr 30 12:43:33 CEST 2013
 PageBase.button.back=Back
 PageBase.button.save=Save
+WorkItemsPanel.assigned=Assigned to
+WorkItemsPanel.created=Created
+WorkItemsPanel.name=Name
 pageBase.midPointVersion=Verzia\: ${pom.version}, revízia\: ${buildNumber}
 pageBase.rightsReserved=&copy;2013 Evolveum. Všetky práva vyhradené.
 pageBase.unknownBuildNumber=neznáme
