--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Fri Nov 02 15:50:33 CET 2012
+#Tue Apr 30 12:43:33 CEST 2013
 pageAdmin.configuration=Konfigurácia
 pageAdmin.configuration.description=Zabezpečenie, logovanie, import
 pageAdmin.home=Domov
@@ -26,4 +26,12 @@ pageTask.scheduleValidation.intervalNotPositive='Schedule interval' must be a po
 pageTask.scheduleValidation.invalidCronSpecification='Cron-like specification' is not valid.
 pageTask.scheduleValidation.neitherIntervalNorCron=Exactly one of 'Schedule interval' and 'Cron-like specification' must be specified.
 pageTask.scheduleValidation.noInterval='Schedule interval' must be specified.
+pageTasks.category.AllCategories=All categories
+pageTasks.category.Demo=Demo
+pageTasks.category.ImportFromFile=Import from file
+pageTasks.category.ImportingAccounts=Importing accounts
+pageTasks.category.LiveSynchronization=Live synchronization
+pageTasks.category.Reconciliation=Reconciliation
+pageTasks.category.UserRecomputation=User recomputation
+pageTasks.category.Workflow=Workflow
 pageTasks.runsContinually=runs continually
