--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResource_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResource_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu Oct 04 12:42:36 CEST 2012
+#Tue Apr 30 12:43:33 CEST 2013
 page.title=Detaily koncového systému
 pageResource.bundle=Balík
 pageResource.button.back=Späť
@@ -12,6 +12,7 @@ pageResource.conSanity=Stav konektora
 pageResource.conSchema=Schéma konektora
 pageResource.confValidation=Validácia konfigurácie
 pageResource.connectorDetails=Detaily konektora
+pageResource.editResource=Edit resource
 pageResource.import=Import
 pageResource.message.oidNotDefined=Oid koncového systému nebolo definované.
 pageResource.name=Meno
@@ -24,7 +25,6 @@ pageResource.oid=Oid
 pageResource.overallStatus=Celkový stav
 pageResource.progress=Aktuálny status
 pageResource.resource=Systém
-pageResource.seeDebug=See debug pages
 pageResource.status=Stav
 pageResource.sync=Synchronizácia
 pageResource.type=Typ
