--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu Oct 04 12:42:36 CEST 2012
+#Tue Apr 30 12:43:33 CEST 2013
 page.title={0}
 pageContentAccounts.accounts=Accounts
 pageContentAccounts.button.changeOwner=Change owner
@@ -9,6 +9,7 @@ pageContentAccounts.identifiers=Identifiers
 pageContentAccounts.message.cantShowAccountDetails=Can't show details for account {0} ({1}).
 pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} ({1}).
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
+pageContentAccounts.message.resourceOidNotDefined=Resource oid is not defined in url.
 pageContentAccounts.name=Name
 pageContentAccounts.optionsTitle=Options
 pageContentAccounts.owner=Owner
