--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentEntitlements_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentEntitlements_sk_SK.utf8.properties
@@ -1,3 +1,4 @@
-#Thu Oct 04 12:42:36 CEST 2012
+#Tue Apr 30 12:43:33 CEST 2013
 page.title={0}
 pageContentEntitlements.entitlements=Entitlements
+pageContentEntitlements.message.resourceOidNotDefined=Resource oid is not defined in url.
