--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Mon Dec 03 22:55:29 CET 2012
+#Tue Apr 30 12:43:33 CEST 2013
 page.title=Task details
 pageTaskEdit.bound=Tightly bound (use if recurring task runs often) 
 pageTaskEdit.boundHelp=Tightly bound tasks are used to run short actions, which are repeating quite often (e.g. in intervals less than 1 minute). A typical example is the live synchronization. Cron-like specification is not supported for these tasks; you have to specify the time interval. 
@@ -10,11 +10,14 @@ pageTaskEdit.cronHelp=Cron-like specification is in the form\: SECONDS MINUTES H
 pageTaskEdit.cronHelpLink=For more information, please see 
 pageTaskEdit.cronSpec=Schedule cron-like specification
 pageTaskEdit.execution=Execution status
+pageTaskEdit.handlerUri=Handler URI
+pageTaskEdit.identifier=Identifier
 pageTaskEdit.lastFinished=Task run last finished
 pageTaskEdit.lastStarted=Task run last started
 pageTaskEdit.message.cantTaskDetails=Couldn't load task details.
 pageTaskEdit.message.node=- at node {0}
 pageTaskEdit.misfire=Misfire action
+pageTaskEdit.modelOperationStatusLabel=Model operation status
 pageTaskEdit.name=Task name
 pageTaskEdit.nextRun=Next scheduled task run
 pageTaskEdit.notStartAfter=Do not start after
@@ -25,15 +28,17 @@ pageTaskEdit.opResult.message=Message
 pageTaskEdit.opResult.operation=Operation
 pageTaskEdit.opResult.status=Status
 pageTaskEdit.opResult.token=Token
+pageTaskEdit.parent=Parent task
 pageTaskEdit.recurring=Recurring task 
 pageTaskEdit.runUntilNodeDown=Run only until node down
 pageTaskEdit.scheduleHelp=For one-time tasks, enter neither schedule interval nor cron-like specification. For recurring tasks, enter exactly one of these.
 pageTaskEdit.scheduleInterval=Schedule interval (seconds) 
 pageTaskEdit.scheduleTitle=Scheduling
+pageTaskEdit.subtasksLabel=Subtasks
 pageTaskEdit.suspendReq=Skôr ako je možné editovať úlohu, je potrebné ju pozastaviť.
 pageTaskEdit.threadStop=Thread stop action
 pageTaskEdit.tightlyBound=Tightly bound
 pageTaskEdit.title.edit=Details for '{0}'
-pageTaskEdit.handlerUri=Handler URI
+pageTaskEdit.workflowInformationLabel=Workflow information
 runUntilNodeDown.error1=Compatible data for 'Thread stop action' are\: Close, Suspend
 runUntilNodeDown.error2=Compatible data for 'Thread stop action' are\: Restart, Reschedule
