--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Mon Jun 11 10:48:02 CEST 2012
+#Tue Apr 30 12:43:33 CEST 2013
 TaskListType.ACTIVATED=Activated
 TaskListType.ALL=All
 TaskListType.DEACTIVATED=Deactivated
@@ -21,14 +21,6 @@ pageTasks.button.stopSchedulerAndTasks=Stop scheduler + tasks
 pageTasks.button.suspendTask=Suspend
 pageTasks.button.synchronizeTasks=Synchronize tasks
 pageTasks.category=Category\:
-pageTasks.category.AllCategories=All categories
-pageTasks.category.Demo=Demo
-pageTasks.category.ImportFromFile=Import from file
-pageTasks.category.ImportingAccounts=Importing accounts
-pageTasks.category.LiveSynchronization=Live synchronization
-pageTasks.category.Reconciliation=Reconciliation
-pageTasks.category.UserRecomputation=User recomputation
-pageTasks.category.Workflow=Workflow
 pageTasks.diagnostics=Diagnostics
 pageTasks.in=in {0}
 pageTasks.message.alreadyResumed=Task '{0}' can't be resumed, it's already running or closed.
@@ -46,8 +38,10 @@ pageTasks.nodes=Nodes
 pageTasks.now=now
 pageTasks.optionsTitle=Advanced options
 pageTasks.state=State\:
+pageTasks.subtasks=Show subtasks\:
 pageTasks.task.category=Category
 pageTasks.task.currentRunTime=Current run time
+pageTasks.task.detail=Detail
 pageTasks.task.executingAt=Executing at
 pageTasks.task.execution=Execution
 pageTasks.task.name=Name
