--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Sat Mar 16 14:26:07 CET 2013
+#Tue Apr 30 12:43:33 CEST 2013
 page.title=Detaily používateľa
 pageUser.accounts=Účty
 pageUser.assignment.active=Aktívny
@@ -44,6 +44,11 @@ pageUser.message.noPassword=Password is not entered.
 pageUser.message.noResourceSelected=Nebol vybratý koncový systém.
 pageUser.message.unsupportedState=Nepodporovaný stav formulára spoužívateľom '{0}'.
 pageUser.orgUnits=Organization units [{0}]
+pageUser.task.category=Category
+pageUser.task.execution=Execution state
+pageUser.task.name=Task name
+pageUser.task.status=Status
+pageUser.tasks=Tasks [{0}]
 pageUser.title.confirmDelete=Potvrdenie zmazanie
 pageUser.title.editing={0} details
 pageUser.title.selectAssignable=Select object(s)
