--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
@@ -1,10 +1,16 @@
-#Fri Nov 02 15:50:33 CET 2012
+#Tue Apr 30 12:43:33 CEST 2013
 page.title=Detaily pracovnej položky
+pageWorkItem.accordionLabel.additionalData=Related data (detailed)
+pageWorkItem.accordionLabel.objectNew=Object after proposed change (detailed)
+pageWorkItem.accordionLabel.objectOld=Object before change (detailed)
+pageWorkItem.accordionLabel.processInstance=Process instance information
+pageWorkItem.accordionLabel.requester=Requester (detailed)
 pageWorkItem.additionalData.description=Role to be added
 pageWorkItem.additionalInfo=Supplementary information (do not edit)
 pageWorkItem.button.approve=Schváliť (neimpl)
 pageWorkItem.button.cancel=Zrušiť
 pageWorkItem.button.reject=Zamietnuť (neimpl)
+pageWorkItem.delta=Delta to be approved
 pageWorkItem.description=Pracovná položka
 pageWorkItem.mainInfo=Basic information
 pageWorkItem.objectNew.description=Object after proposed change
