--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/assignment/ACAttributePanel_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/component/assignment/ACAttributePanel_en_US.utf8.properties
@@ -1,2 +1,4 @@
-#Thu Oct 04 12:38:45 CEST 2012
+#Tue Apr 30 12:44:04 CEST 2013
 ACAttributePanel.button.showExprEditor=Show expression
+ACAttributePanel.hasOutbound=Has outbound
+ACAttributePanel.required=Required
