--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResource_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResource_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Thu Oct 04 12:38:45 CEST 2012
+#Tue Apr 30 12:44:04 CEST 2013
 page.title=Resource details
 pageResource.bundle=Bundle
 pageResource.button.back=Back
@@ -12,6 +12,7 @@ pageResource.conSanity=Connector sanity
 pageResource.conSchema=Connector schema
 pageResource.confValidation=Configuration validation
 pageResource.connectorDetails=Connector details
+pageResource.editResource=Edit resource
 pageResource.import=Import
 pageResource.message.oidNotDefined=Resource oid not defined in request.
 pageResource.name=Name
@@ -24,7 +25,6 @@ pageResource.oid=Oid
 pageResource.overallStatus=Overall status
 pageResource.progress=Progress
 pageResource.resource=Resource
-pageResource.seeDebug=See debug pages
 pageResource.status=Status
 pageResource.sync=Sync
 pageResource.type=Type
