--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit_sk_SK.utf8.properties
@@ -1,3 +1,5 @@
-#Fri Nov 02 15:50:33 CET 2012
+#Tue Apr 30 12:43:33 CEST 2013
 page.title=New resource
 page.title.editResource=Edit resource
+pageResourceEdit.edit=Edit
+pageResourceEdit.message.emptyXml=Can't save empty xml as resource.
