fix for MID-1227 (optional schema validation)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView.properties
@@ -25,5 +25,6 @@ pageDebugView.oid=Oid:
 pageDebugView.name=Name:
 pageDebugView.edit=Edit
 pageDebugView.encrypt=Protected by encryption
+pageDebugView.validateSchema=Validate schema
 pageDebugView.message.cantSaveEmpty=Can't save empty xml.
 pageDebugView.message.oidNotDefined=Object oid is not defined.
