minor cleanup in gui resource status, localization fixed for object template

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -40,7 +40,7 @@ schema.objectTypes.abstractRole=Abstract role
 schema.objectTypes.role=Role
 schema.objectTypes.systemConfiguration=System configuration
 schema.objectTypes.task=Task
-schema.objectTypes.userTemplate=User template
+schema.objectTypes.objectTemplate=Object template
 schema.objectTypes.user=User
 schema.objectTypes.org=Organization
 schema.objectTypes.shadow=Shadow
