--- a/repo/repo-test-util/pom.xml
+++ b/repo/repo-test-util/pom.xml
@@ -58,6 +58,11 @@
 			<version>2.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>com.evolveum.midpoint.repo</groupId>
+			<artifactId>repo-sql-impl-test</artifactId>
+			<version>2.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>test-util</artifactId>
 			<version>2.2-SNAPSHOT</version>
