--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Thu Oct 04 12:38:45 CEST 2012
+#Fri May 03 16:27:57 CEST 2013
 page.title=View object
 pageDebugView.button.back=Back
 pageDebugView.button.save=Save
@@ -8,3 +8,4 @@ pageDebugView.message.cantSaveEmpty=Can't save empty xml.
 pageDebugView.message.oidNotDefined=Object oid is not defined.
 pageDebugView.name=Name\:
 pageDebugView.oid=Oid\:
+pageDebugView.validateSchema=Validate schema
