--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Tue Apr 30 12:44:04 CEST 2013
+#Fri May 03 16:27:57 CEST 2013
 ActivationType.enabled=Enabled
 ActivationType.title=Activation
 ActivationType.validFrom=Valid from
@@ -71,6 +71,7 @@ TaskDtoExecutionStatus.SUSPENDED=Suspended
 TaskDtoExecutionStatus.WAITING=Waiting
 TaskDtoExecutionStatusFilter.ALL=All execution states
 TaskDtoExecutionStatusFilter.CLOSED=Closed
+TaskDtoExecutionStatusFilter.NOT_CLOSED=Not closed
 TaskDtoExecutionStatusFilter.RUNNING_OR_RUNNABLE=Runnable or running
 TaskDtoExecutionStatusFilter.SUSPENDED=Suspended
 TaskDtoExecutionStatusFilter.WAITING=Waiting
@@ -319,6 +320,7 @@ schema.objectTypes.connectorHost=Connector host
 schema.objectTypes.genericObject=Generic object
 schema.objectTypes.node=Node
 schema.objectTypes.object=Object
+schema.objectTypes.objectTemplate=Object template
 schema.objectTypes.org=Organization
 schema.objectTypes.resource=Resource
 schema.objectTypes.role=Role
@@ -326,7 +328,6 @@ schema.objectTypes.shadow=Shadow
 schema.objectTypes.systemConfiguration=System configuration
 schema.objectTypes.task=Task
 schema.objectTypes.user=User
-schema.objectTypes.userTemplate=User template
 schema.objectTypes.valuePolicy=Value policy
 web.security.provider.denied=Permission denied.
 web.security.provider.disabled=User is disabled.
