--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu Oct 04 12:42:36 CEST 2012
+#Fri May 03 16:27:45 CEST 2013
 page.title=Zobrazenie objektu
 pageDebugView.button.back=Späť
 pageDebugView.button.save=Uložiť
@@ -8,3 +8,4 @@ pageDebugView.message.cantSaveEmpty=Nie je možné uložit prázdne xml.
 pageDebugView.message.oidNotDefined=OID objektu nie je definované.
 pageDebugView.name=Meno\:
 pageDebugView.oid=Oid\:
+pageDebugView.validateSchema=Validate schema
