--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -99,6 +99,7 @@ TaskDtoExecutionStatusFilter.RUNNING_OR_RUNNABLE=Runnable or running
 TaskDtoExecutionStatusFilter.WAITING=Waiting
 TaskDtoExecutionStatusFilter.SUSPENDED=Suspended
 TaskDtoExecutionStatusFilter.CLOSED=Closed
+TaskDtoExecutionStatusFilter.NOT_CLOSED=Not closed
 
 NodeExecutionStatus.RUNNING=Running
 NodeExecutionStatus.PAUSED=Stopped
