--- a/repo/repo-sql-impl-test/sample-configurations/sqlserver.properties
+++ b/repo/repo-sql-impl-test/sample-configurations/sqlserver.properties
@@ -23,6 +23,6 @@ embedded=false
 driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 hibernateHbm2ddl=validate
 hibernateDialect=com.evolveum.midpoint.repo.sql.util.UnicodeSQLServer2008Dialect
-jdbcPassword=qwer1234X
-jdbcUsername=bamboo
-jdbcUrl=jdbc:sqlserver://192.168.1.27:11433;database=midpoint
+jdbcPassword=password
+jdbcUsername=midpoint
+jdbcUrl=jdbc:sqlserver://localhost:1433;database=midpoint
