reverted couple files which were commited by fault.

--- a/repo/repo-sql-impl-test/sample-configurations/sqlserver.properties
+++ b/repo/repo-sql-impl-test/sample-configurations/sqlserver.properties
@@ -26,3 +26,6 @@ hibernateDialect=com.evolveum.midpoint.repo.sql.util.UnicodeSQLServer2008Dialect
 jdbcPassword=password
 jdbcUsername=midpoint
 jdbcUrl=jdbc:sqlserver://localhost:1433;database=midpoint
+#jdbcPassword=qwer1234X
+#jdbcUsername=bamboo
+#jdbcUrl=jdbc:sqlserver://192.168.1.27:11433;database=midpoint
