--- a/infra/schema/pom.xml
+++ b/infra/schema/pom.xml
@@ -180,6 +180,12 @@
                                         <extraarg>-verbose</extraarg>
                                         <extraarg>-validate</extraarg>
                                         <extraarg>-xjc-Xts</extraarg>
+                                        <extraarg>-xjc-XhashCode</extraarg>
+                                        <extraarg>-xjc-Xequals</extraarg>
+                                        <extraarg>
+                                            -xjc-Xequals-equalsStrategyClass=com.evolveum.midpoint.util.xml.DomAwareEqualsStrategy
+                                        </extraarg>
+                                        <extraarg>-xjc-Xmidpoint</extraarg>
                                         <extraarg>-nexclude</extraarg>
                                         <extraarg>http://prism.evolveum.com/xml/ns/public/types-2</extraarg>
                                         <extraarg>-nexclude</extraarg>
