now using administrative status in gui MID-1308

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -73,6 +73,11 @@ OperationResultStatus.FATAL_ERROR=Fatal error
 OperationResultStatus.NOT_APPLICABLE=Not applicable
 OperationResultStatus.IN_PROGRESS=In progress
 
+ActivationStatusType.ENABLED=Enabled
+ActivationStatusType.DISABLED=Disabled
+ActivationStatusType.ARCHIVED=Archived
+ActivationStatusType.ABSENT=Absent
+
 LoggingLevelType.ALL=ALL
 LoggingLevelType.ERROR=ERROR
 LoggingLevelType.WARN=WARN
