tests for cleanup methods. MID-1292

--- a/repo/repo-sql-impl-test/sample-configurations/mysql.properties
+++ b/repo/repo-sql-impl-test/sample-configurations/mysql.properties
@@ -21,7 +21,7 @@
 
 embedded=false
 driverClassName=com.mysql.jdbc.Driver
-hibernateHbm2ddl=validate
+hibernateHbm2ddl=update
 hibernateDialect=com.evolveum.midpoint.repo.sql.util.MidPointMySQLDialect
 jdbcUsername=midpoint
 jdbcPassword=qwe123
