Swapped name and description for prism objects in WorkItem gui. Made technical information optional and disabled by default. Removed another PrismObject from process variables (some remain - MID-1315).

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
@@ -22,13 +22,13 @@
 page.title=Work Item details
 pageWorkItem.description=Work Item
 pageWorkItem.requester.description=Requester
-pageWorkItem.accordionLabel.requester=Requester (detailed)
+pageWorkItem.accordionLabel.requester=Requester (technical information)
 pageWorkItem.objectOld.description=Object before change
-pageWorkItem.accordionLabel.objectOld=Object before change (detailed)
+pageWorkItem.accordionLabel.objectOld=Object before change (technical information)
 pageWorkItem.objectNew.description=Object after proposed change
-pageWorkItem.accordionLabel.objectNew=Object after proposed change (detailed)
+pageWorkItem.accordionLabel.objectNew=Object after proposed change (technical information)
 pageWorkItem.additionalData.description=Related data
-pageWorkItem.accordionLabel.additionalData=Related data (detailed)
+pageWorkItem.accordionLabel.additionalData=Related data (technical information)
 pageWorkItem.accordionLabel.processInstance=Process instance information
 
 pageWorkItem.trackingData.description=Tracking (diagnostic) data
@@ -46,4 +46,6 @@ pageWorkItem.title=Work to do:
 pageWorkItem.requestedBy=Requested by:
 pageWorkItem.requestedOn=Requested on:
 pageWorkItem.workItemCreatedOn=This work item created on:
+
+pageWorkItem.label.showTechnicalInformation=Show technical information
 
