--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!--
   ~ Copyright (c) 2010-2013 Evolveum
   ~
@@ -32,10 +31,9 @@
     </organization>
     <licenses>
         <license>
-            <name>CDDL v1.0</name>
-            <url>http://www.sun.com/cddl/cddl.html</url>
+            <name>Apache License v2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
         </license>
     </licenses>
     <issueManagement>
