disabling activation for assignments, fix for MID-1317

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -142,6 +142,8 @@ ObjectType.name=Name
 
 ActivationType.title=Activation
 ActivationType.enabled=Enabled
+ActivationType.administrativeStatus=Administrative status
+ActivationType.effectiveStatus=Effective status
 ActivationType.validFrom=Valid from
 ActivationType.validTo=Valid to
 
