--- a/model/model-impl/pom.xml
+++ b/model/model-impl/pom.xml
@@ -206,6 +206,12 @@
             <artifactId>servlet-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		    <groupId>com.googlecode.java-diff-utils</groupId>
+		    <artifactId>diffutils</artifactId>
+		    <version>1.2.1</version>
+            <scope>test</scope>
+		</dependency>
     </dependencies>
 	<profiles>
 		<profile>
