report pages, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
@@ -15,26 +15,18 @@
 #
 
 page.title=Reports
-pageReports.isEnable=Is activated
-pageReports.hasAccountOnResource=Select any resource:
-pageReports.searchUser=Search text:
 
-pageReports.optionsTitle=Options
-pageReports.objectsType=Select object type
-pageReports.usersFilter=Users filter
-
-pageReports.button.searchButton=Search
-pageReports.button.clearButton=Clear
-pageReports.button.label.report=Create report for:
-pageReports.button.selectedReport=Selected
-pageReports.button.allReport=All
-
-pageReports.reportLink=Report link
-pageReports.resourceHelp=To generate the report correctly it is necessary to select any resource.
-pageReports.message.nothingSelected=No object has been selected.
-pageReports.message.noResourceSelected=No resource is selected. To continue, you must import any resource.
-
-pageReports.objectType.UserType=User type
-
-pageReports.message.queryError=Error occurred during translation search query to filter.
 pageReports.message.jasperError=Error occurred during creating Jasper report.
+
+PageReports.report.auditName=Audit logs
+PageReports.report.auditDescription=Report made from audit records.
+PageReports.report.reconciliationName=Reconciliation
+PageReports.report.reconciliationDescription=Reconciliation report for selected resource.
+PageReports.report.usersName=Users in MidPoint
+PageReports.report.usersDescription=Users listed in MidPoint.
+
+PageReports.table.name=Name
+PageReports.table.description=Description
+
+PageReports.title.auditPopup=Audit report parameters
+PageReports.title.reconciliationPopup=Reconciliation report parameters
