--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -20,6 +20,7 @@ pageBase.unknownBuildNumber=unknown
 #most common used button names, used also in PageBase subclasses
 PageBase.button.save=Save
 PageBase.button.back=Back
+PageBase.button.run=Run
 
 WorkItemsPanel.name=Name
 WorkItemsPanel.assigned=Assigned to
