report pages, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
@@ -17,6 +17,7 @@
 page.title=Reports
 
 pageReports.message.jasperError=Error occurred during creating Jasper report.
+PageReports.message.unknownReport=Unknown report.
 
 PageReports.report.auditName=Audit logs
 PageReports.report.auditDescription=Report made from audit records.
