report pages, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
@@ -16,7 +16,7 @@
 
 page.title=Reports
 
-pageReports.message.jasperError=Error occurred during creating Jasper report.
+PageReports.message.jasperError=Error occurred during creating Jasper report.
 PageReports.message.unknownReport=Unknown report.
 
 PageReports.report.auditName=Audit logs
@@ -31,3 +31,5 @@ PageReports.table.description=Description
 
 PageReports.title.auditPopup=Audit report parameters
 PageReports.title.reconciliationPopup=Reconciliation report parameters
+
+PageReports.message.resourceNotDefined=Resource not defined.
