fix for MID-1356

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -70,3 +70,4 @@ pageTasks.category.LiveSynchronization=Live synchronization
 pageTasks.category.Reconciliation=Reconciliation
 pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
+pageTasks.category.Cleanup=Cleanup
