fix for MID-1371

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -408,3 +408,6 @@ operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.getRepoDiag=Get r
 operation.com.evolveum.midpoint.web.component.prism.ObjectWrapper.createContainers=Create containers (Gui)
 operation.com.evolveum.midpoint.web.component.prism.ContainerWrapper.createProperties=Create properties (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResourceEdit.saveResource=Save resource (Gui)
+
+HoursValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
+RangeValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
